# AI-Powered-Customer-Support-Agent-with-Memory-and-Tool-Calling

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
customer_support_agent/api/routers/: drafts.py  memory.py
customer_support_agent/integrations/tools/: sentiment_tools.py  support_tools.py
customer_support_agent/repositories/sqlite/: customers.py
customer_support_agent/schemas/: api.py
customer_support_agent/services/: copilot_service.py
docs/: EC2_deployment_flow.md  code_walkthrough.md  knowledge_base_guide.md
tests/: conftest.py  test_customers_repository.py  test_drafts_api.py  test_health.py  test_knowledge_service.py  test_support_tools.py  test_tickets_api.py
